fix(placeImage): 이미지가 overflow되는 버그 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,13 @@
   overflow: hidden;
 }
 
+.notdraggable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-use-select: none;
+  user-select: none;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
